--- a/css/entries-list.css
+++ b/css/entries-list.css
@@ -4,10 +4,11 @@
 }
 
 .filter-margin {
-  padding-top: 10rem;
+  padding-top: 5rem;
   background-color: #ffffff;
   border-bottom: 1px solid #f7f7f7;
   margin-bottom: 5rem;
+  margin-top: -5rem;
 }
 
 .filters {
@@ -38,7 +39,7 @@
 .content {
   display: grid;
   grid-gap: 5rem;
-  grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
   grid-template-rows: repeat(1, 1fr);
 }
 
@@ -147,14 +148,16 @@
 
 @media only screen and (max-width: 587px) {
   .list-container {
-    margin: 3rem auto;
+    margin: 0 auto;
   }
   .filter-margin {
     padding-top: 5rem;
-    margin-bottom: 0rem;
+    margin-top: -7rem;
+  }
+  .content .diary-entry {
+    margin-bottom: 3rem;
   }
   .content {
-    /* grid-gap: 5rem; */
-    grid-row-gap: 2rem
+    display: block;
   }
 }
