--- a/css/header.css
+++ b/css/header.css
@@ -62,7 +62,7 @@ nav ul,
     display: inline-block;
     width: 5rem;
     height: 5rem;
-    /* border: 3px solid #f7f7f7; */
+    border: 2px solid #f7f7f7;
     border-radius: 50%;
     cursor: pointer;
     position: relative;
